// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly based on the theme props 1`] = `
<button
  class="rmd-button rmd-button--text"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 2`] = `
<button
  class="rmd-button rmd-button--text rmd-button--contained"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 3`] = `
<button
  class="rmd-button rmd-button--text rmd-button--outline"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 4`] = `
<button
  class="rmd-button rmd-button--text rmd-button--text-primary"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 5`] = `
<button
  class="rmd-button rmd-button--text rmd-button--contained rmd-button--primary"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 6`] = `
<button
  class="rmd-button rmd-button--text rmd-button--outline rmd-button--text-primary rmd-button--outline-primary"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 7`] = `
<button
  class="rmd-button rmd-button--text rmd-button--text-secondary"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 8`] = `
<button
  class="rmd-button rmd-button--text rmd-button--contained rmd-button--secondary"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 9`] = `
<button
  class="rmd-button rmd-button--text rmd-button--outline rmd-button--text-secondary rmd-button--outline-secondary"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 10`] = `
<button
  class="rmd-button rmd-button--text rmd-button--text-warning"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 11`] = `
<button
  class="rmd-button rmd-button--text rmd-button--contained rmd-button--warning"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 12`] = `
<button
  class="rmd-button rmd-button--text rmd-button--outline rmd-button--text-warning rmd-button--outline-warning"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 13`] = `
<button
  class="rmd-button rmd-button--text rmd-button--text-error"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 14`] = `
<button
  class="rmd-button rmd-button--text rmd-button--contained rmd-button--error"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 15`] = `
<button
  class="rmd-button rmd-button--text rmd-button--outline rmd-button--text-error rmd-button--outline-error"
>
  Button Text
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 16`] = `
<button
  class="rmd-button rmd-button--icon"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 17`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--contained"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 18`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--outline"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 19`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--text-primary"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 20`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--contained rmd-button--primary"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 21`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--outline rmd-button--text-primary rmd-button--outline-primary"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 22`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--text-secondary"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 23`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--contained rmd-button--secondary"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 24`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--outline rmd-button--text-secondary rmd-button--outline-secondary"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 25`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--text-warning"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 26`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--contained rmd-button--warning"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 27`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--outline rmd-button--text-warning rmd-button--outline-warning"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 28`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--text-error"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 29`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--contained rmd-button--error"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Button should render correctly based on the theme props 30`] = `
<button
  class="rmd-button rmd-button--icon rmd-button--outline rmd-button--text-error rmd-button--outline-error"
>
  <i />
  <span
    class="rmd-ripple-container"
  />
</button>
`;
